--- a/public/style.css
+++ b/public/style.css
@@ -177,8 +177,8 @@ button:disabled {
 
 #game-container {
     position: relative;
-    width: 800px;
-    height: 600px;
+    width: 95%;
+    height: 95%;
     background: #16213e;
     border: 2px solid #e94560;
     border-radius: 10px;
@@ -212,15 +212,15 @@ button:disabled {
     width: 100%;
     height: 2px;
     background: #e94560;
-    bottom: 20%;
+    bottom: 175px;
     left: 0;
-    box-shadow: 0 0 10px #e94560; /* Glow effect */
+    box-shadow: 0 0 10px #e94560; 
 }
 
 /* Player container */
 #player-container {
     position: absolute;
-    bottom: 6%; /* 10% from the bottom */
+    bottom: 40px; /* 10% from the bottom */
     width: 100%;
     display: flex;
     justify-content: space-around; /* Evenly space players */
@@ -240,7 +240,7 @@ button:disabled {
 /* Word display above the player */
 .word-display {
     position: absolute;
-    bottom: 60px; /* Position above the player */
+    bottom: 53px; /* Position above the player */
     margin-left: 25px;
     transform: translateX(-50%);
     background: rgba(255, 255, 255, 0.1);
@@ -255,7 +255,7 @@ button:disabled {
 /* Name display below the player */
 .name-display {
     position: absolute;
-    bottom: -35px; /* Position above the player */
+    bottom: -30px; /* Position above the player */
     margin-left: 25px;
     transform: translateX(-50%);
     background: rgba(255, 255, 255, 0.1);
@@ -269,6 +269,7 @@ button:disabled {
 
 /* Alien word box */
 .alien {
+    font-size: 0.9rem;
     position: absolute;
     color: #fff;
     background-color: rgba(99, 99, 99, 0.5);
@@ -283,23 +284,30 @@ button:disabled {
 .alien-square {
     position: absolute;
     bottom: -50px;
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
     background: #8c45e9;
     border-radius: 10px;
     box-shadow: 0 0 10px #8c45e9; /* Glow effect */
 }
 
+#game-aliens-container {
+    position: relative;
+    width: 100%;
+    height: calc(100% - 250px);
+}
+
 /* Input box */
 #input-box {
     position: absolute;
-    bottom: 22%;
+    bottom: 130px;
     height: 15px;
     left: 50%;
     transform: translateX(-50%);
     padding: 8px;
     font-size: 16px;
-    width: 300px;
+    width: 50%;
+    max-width: 300px;
     text-align: center;
     background: rgba(255, 255, 255, 0.1);
     border: 2px solid #e94560;
