--- a/public/style.css
+++ b/public/style.css
@@ -75,7 +75,7 @@ button:disabled {
     display: none;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 100dvh;
     background: rgba(0, 0, 0, 0.7); /* Semi-transparent overlay */
     padding-right: 20px;
     padding-left: 20px;
@@ -110,7 +110,7 @@ button:disabled {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100dvh;
     background: rgba(0, 0, 0, 0.7); /* Semi-transparent overlay */
 }
 #name-form h1 {
@@ -140,7 +140,7 @@ button:disabled {
     display: none;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 100dvh;
     background: rgba(0, 0, 0, 0.7); /* Semi-transparent overlay */
 }
 #lobby h1 {
@@ -167,7 +167,7 @@ button:disabled {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: 100dvh;
     background: rgba(0, 0, 0, 0.7); /* Semi-transparent overlay */
 }
 #game-screen h1 {
