--- a/public/style.css
+++ b/public/style.css
@@ -17,17 +17,26 @@ h1, h2, h3 {
 }
 
 .room-container {
+    margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
     padding: 20px;
+    border-radius: 15px;
+    width: 80%;
+    height: calc(100% - 235px);
+    overflow-y: auto;
+    overflow-x: hidden;
+    background-color: rgba(167, 49, 251, 0.05);
+    box-shadow: 0 0 10px rgba(233, 69, 96, 0.5) 
 }
 .room {
     background: rgba(255, 255, 255, 0.1);
     padding: 20px;
     border-radius: 10px;
     width: 200px;
+    height: 130px;
     text-align: center;
     box-shadow: 0 0 10px rgba(233, 69, 96, 0.5); /* Glow effect */
     transition: transform 0.2s, box-shadow 0.2s;
@@ -77,30 +86,44 @@ button:disabled {
     display: none;
     flex-direction: column;
     align-items: center;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.7); /* Semi-transparent overlay */
+    height: calc(100% - 115px);
+    width: 80%;
+    max-width: 500px;
     padding-right: 20px;
     padding-left: 20px;
     border-radius: 20px;
+    background-color: rgba(167, 49, 251, 0.05);
+    box-shadow: 0 0 10px rgba(233, 69, 96, 0.5) 
 }
 #room-title {
-    font-size: 36px;
-    margin-bottom: 20px;
+    font-size: 30px;
+    margin-bottom: 15px;
+    margin-top: 15px;
 }
 .player-list {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    width: 100%;
     margin-bottom: 20px;
 }
-.player {
+.ready-and-exit-btns {
     display: flex;
-    justify-content: space-between;
+    margin-bottom: 15px;
+    width: 100%;
+    justify-content: space-evenly;
+}
+#ready-button, #exit-button {
+    width: 49%;
+}
+.player {
+    height: 26px;
+    position: relative;
+    display: flex;
     align-items: center;
     padding: 10px;
     background: rgba(255, 255, 255, 0.1);
     border-radius: 5px;
-    width: 300px;
     box-shadow: 0 0 10px rgba(233, 69, 96, 0.5); /* Glow effect */
 }
 #player-name {
@@ -154,8 +177,15 @@ button:disabled {
     color: #aaa;
 }
 .name-and-play-container button {
-
     margin-left: 10px;
+}
+.first-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 255, 255, 0.1);
+    width: 150px;
+    height: 150px;
 }
 /* Lobby */
 #lobby {
@@ -167,7 +197,11 @@ button:disabled {
 }
 #lobby h1 {
     font-size: 48px;
-    margin-bottom: 10px;
+    margin-bottom: 16px;
+    margin-top: 16px;
+}
+#create-room-btn {
+    margin-top: 20px;
 }
 
 .player-ready {
@@ -178,9 +212,74 @@ button:disabled {
     color: #e94560; /* Pink for not ready */
 }
 .kick-button {
-    color: #e94560;
+    position: absolute;
+    right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 46px;
+    margin-right: -10px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-color: rgba(233, 45, 60, 0.5);
     cursor: pointer;
-    font-size: 18px;
+}
+.crown-display {
+    position: absolute;
+    right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 46px;
+    margin-right: -10px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-color: rgba(255, 252, 66, 0.2);
+    cursor: pointer;
+}
+.blank-button {
+    position: absolute;
+    right: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 46px;
+    margin-right: -10px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.2);
+    cursor: pointer;
+}
+.chosen-cat {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100% + 20px);
+    width: 46px;
+    margin-left: -10px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    background-color: rgba(89, 89, 89, 0.2);
+    cursor: pointer;
+}
+.player-name {
+    margin-left: 10px;
+    max-width: calc(100% - 155px);
+    overflow: auto;
+}
+#ready-state {
+    position: absolute;
+    right: 55px;
+}
+.character-selection {
+    margin: -3px 0px -3px 0px;
+    background-color: rgba(255, 255, 255, 0.2);
+    border-radius: 5px;
+    width: 100%;
+    height: 110px;
 }
 
 /* Game screen */
@@ -201,21 +300,25 @@ button:disabled {
     position: relative;
     width: 95%;
     height: 95%;
-    background: #16213e;
+    background: rgba(184, 184, 184, 0.1);
     border: 2px solid #e94560;
+    box-shadow: 0 0 10px #e94560;
     border-radius: 10px;
     overflow: hidden;
 }
 
 #game-over-screen {
-    position: absolute;
-    top: 50%;
-    left: 50%;
     transform: translate(-50%, -50%);
     background-color: rgba(0, 0, 0, 0.8);
     color: #fff;
     padding: 20px;
+    width: 70%;
+    max-width: 300px;
     border-radius: 10px;
+}
+#game-over-screen h2 {
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .room.in-progress {
@@ -291,6 +394,7 @@ button:disabled {
 
 /* Alien word box */
 .alien {
+    user-select: none;
     font-size: 0.9rem;
     position: absolute;
     color: #fff;
