--- a/public/style.css
+++ b/public/style.css
@@ -162,6 +162,7 @@ button:disabled {
     align-items: center;
     justify-content: center;
     height: 100%;
+    overflow: hidden;
     background: rgba(0, 0, 0, 0.7); /* Semi-transparent overlay */
 }
 #name-form h1 {
@@ -385,6 +386,7 @@ button:disabled {
     align-items: center;
     justify-content: center;
     height: 100%;
+    overflow: hidden;
     background: rgba(0, 0, 0, 0.7); /* Semi-transparent overlay */
 }
 #game-screen h1 {
