--- a/public/style.css
+++ b/public/style.css
@@ -411,26 +411,30 @@ button:disabled {
 }
 
 /* Game-over line */
-#game-over-line {
+#game-over-screen {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     position: absolute;
-    width: 100%;
-    height: 2px;
-    background: #e94560;
-    bottom: 175px;
-    left: 0;
-    box-shadow: 0 0 10px #e94560;
-    transition: background 0.2s ease, box-shadow 0.2s ease;
+    top: 50%;
+    left: 50%;
+    max-height: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0, 0.85);
+    padding: 5px 15px 15px 15px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 0 20px rgba(233, 69, 96, 0.8); /* Glow effect */
 }
 
-.health-bar {
-    position: absolute;
-    width: 100%;
-    height: 11px;
-    background: rgba(255, 0, 0, 0.5);
-    bottom: 177px;
-    left: 0;
-    box-shadow: 0 0 10px #e94560; 
-    transition: width 0.3s ease-in;
+#game-over-screen #countdown {
+    margin: 5px 0px 5px 0px;
+}
+
+#game-over-screen h2 {
+    font-size: 34px;
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 .shield-bar {
