--- a/public/style.css
+++ b/public/style.css
@@ -499,19 +499,22 @@ button:disabled {
     max-height: 16px;
 }
 /* Input cd */
-.input-cd {
+.input-cd-frame {
     position: absolute;
     bottom: 130px;
-    height: 15px;
+    height: 34.2px;
     left: 50%;
     transform: translateX(-50%);
-    padding: 8px;
-    font-size: 16px;
-    width: 50%;
-    max-width: 300px;
+    width: calc(50% + 16px);
+    max-width: 316px;
+    pointer-events: none;
+}
+
+.input-cd {
+    height: 100%;
+    width: 100%;
     text-align: center;
     border-radius: 5px;
-    color: #fff;
     pointer-events: none;
 }
 
@@ -764,8 +767,6 @@ button:disabled {
     border: 2px solid #000000;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Glow effect */
 }
-
-
 
 @keyframes fadeLaser {
     0% {
