--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,6 @@
 /* General styles */
 body {
-    font-family: 'Orbitron', sans-serif;
+    font-family: 'Righteous', sans-serif;
     margin: 0;
     padding: 0;
     background: linear-gradient(135deg, #1a1a2e, #16213e); /* Galaxy gradient */
@@ -12,7 +12,7 @@ body {
 }
 
 h1, h2, h3 {
-    font-family: 'Orbitron', sans-serif; /* Futuristic font */
+    font-family: 'Righteous', sans-serif; /* Futuristic font */
     color: #e94560; /* Vibrant pink */
     text-shadow: 0 0 10px #e94560, 0 0 20px #e94560; /* Glow effect */
     justify-self: center;
@@ -423,6 +423,20 @@ button:disabled {
     transition: background 0.2s ease, box-shadow 0.2s ease;
 }
 
+.help-IG-btn {
+    position: absolute;
+    width: 34.2px;
+    height: 34.2px;
+    background: url("./images/Help.png") no-repeat center center;
+    background-size: cover;
+    padding: 0px;
+    bottom: 130px;
+    left: 11px;
+    border-radius: 100px;
+}
+.help-IG-btn:hover {
+    box-shadow: 0 0 10px #ffffff;
+}
 .health-bar {
     position: absolute;
     width: 100%;
@@ -466,7 +480,7 @@ button:disabled {
 /* Word display above the player */
 .word-display {
     position: absolute;
-    bottom: 53px; /* Position above the player */
+    bottom: 58px; /* Position above the player */
     margin-left: 25px;
     transform: translateX(-50%);
     background: rgba(255, 255, 255, 0.1);
@@ -484,7 +498,7 @@ button:disabled {
 /* Name display below the player */
 .name-display {
     position: absolute;
-    bottom: -30px; /* Position above the player */
+    bottom: -32px; /* Position above the player */
     margin-left: 25px;
     transform: translateX(-50%);
     background: rgba(255, 255, 255, 0.1);
@@ -532,10 +546,9 @@ button:disabled {
         height 0.3s ease;
     overflow: visible; /* Ensure contents aren't clipped */
     contain: layout; /* Improves performance */
-    background-color: rgba(99, 99, 99, 0.5);
+    background-color: rgba(60, 60, 60, 0.8);
     border-radius: 6px;
 }
-
 
 /* Alien body box */
 .alien-square {
@@ -550,7 +563,7 @@ button:disabled {
 .alien img {
     display: block;
     height: auto;
-    max-width: 100%;
+    width: auto;
     max-height: 100px; /* Prevent excessively tall images */
     object-fit: contain; /* Maintain aspect ratio */
 }
@@ -856,12 +869,11 @@ button:disabled {
 }
 .characterM {
     border-left: 5px solid white;
-    padding: 1rem;
+    padding: 0.5rem 1rem 0.5rem 1rem;
     margin-bottom: 1rem;
     border-radius: 0.5rem;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
     align-items: center;
     background: rgba(255,255,255,0.05);
 }
@@ -872,8 +884,7 @@ button:disabled {
     object-fit: cover;
 }
 .characterM h4, h3 {
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0;
 }
 .characterM.white { border-color: white; }
 .characterM.purple { border-color: purple; }
@@ -947,4 +958,62 @@ button:disabled {
 .name-Power {
     color: #ff0000; 
     text-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000;
+}
+
+.white-text-abil {
+    color: #ffffff;
+}
+.purple-text-abil {
+    color: #ff00ff;
+    border-radius: 5px;
+    border: 1px #ff00ff solid;
+    padding: 0px 5px 0px 5px;
+}
+.blue-text-abil {
+    color: #0000ff;
+    border-radius: 5px;
+    border: 1px #0000ff solid;
+    padding: 0px 5px 0px 5px;
+}
+.green-text-abil {
+    color: #00ff00;
+    border-radius: 5px;
+    border: 1px #00ff00 solid;
+    padding: 0px 5px 0px 5px;
+}
+.yellow-text-abil {
+    color: #ffff00;
+    border-radius: 5px;
+    border: 1px #ffff00 solid;
+    padding: 0px 5px 0px 5px;
+}
+.orange-text-abil {
+    color: #ff9900;
+    border-radius: 5px;
+    border: 1px #ff9900 solid;
+    padding: 0px 5px 0px 5px;
+}
+.red-text-abil {
+    color: #ff0000;
+    border-radius: 5px;
+    border: 1px #ff0000 solid;
+    padding: 0px 5px 0px 5px;
+}
+
+.characterM ul li {
+    margin-bottom: 5px;
+}
+
+.disconnected-screen {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 0, 0, 0.3);
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 50px;
+    text-shadow: 0 0 10px #ffffff, 0 0 20px #ffffff;
 }
